Restricting files track

--- a/.gitignore
+++ b/.gitignore
@@ -1,22 +1,44 @@
-.Rproj.user
-.Rhistory
-.RData
-.Ruserdata
-Bolsa/*
-*.mp4
-./Researches/2020_ICMS/data/EXP_COMPLETA.csv
-./Researches/2020_ICMS/data/IMP_COMPLETA.zip
-./Researches/2020_ICMS/data/EXP_COMPLETA.zip
-./Researches/2020_ICMS/data/IMP_COMPLETA.csv
-./Researches/cdc-relatorios/.git/objects/pack/pack-41f09d0d1c2319bfca900ceb6d31eaf7a432de61.pack
-./Researches/cdc-relatorios/data/exportacao/BRAZIL_BEEF_2.0_pc/BRAZIL_BEEF_2.0_pc.2017.csv
-./Researches/cdc-relatorios/data/IBGE-municipios/shapefiles-br_municipios/BRMUE250GC_SIR.shp
-./.git/objects/35/c7c15d7e5835115afa51d2b0f1f843d2d9bcef
-./.git/objects/pack/tmp_pack_XyjEE6
-./.git/objects/pack/pack-2f5633c36298d2fed697c8c462b17e78cbfcf025.pack
-./Videos/*
-./Materias/1S2020/HO212/*
-./Materias/1S2020//HO413A/Lsd-*
-./Materias/1S2020//HO413A/Aula_11/Pajek64/*
-./Orientacoes/Lorena/refs/*
+#.Ruserdata
+#Bolsa/*
+#*.mp4
+#./Researches/2020_ICMS/data/EXP_COMPLETA.csv
+#./Researches/2020_ICMS/data/IMP_COMPLETA.zip
+#./Researches/2020_ICMS/data/EXP_COMPLETA.zip
+#./Researches/2020_ICMS/data/IMP_COMPLETA.csv
+#./Researches/cdc-relatorios/.git/objects/pack/pack-41f09d0d1c2319bfca900ceb6d31eaf7a432de61.pack
+#./Researches/cdc-relatorios/data/exportacao/BRAZIL_BEEF_2.0_pc/BRAZIL_BEEF_2.0_pc.2017.csv
+#./Researches/cdc-relatorios/data/IBGE-municipios/shapefiles-br_municipios/BRMUE250GC_SIR.shp
+#./.git/objects/35/c7c15d7e5835115afa51d2b0f1f843d2d9bcef
+#./.git/objects/pack/tmp_pack_XyjEE6
+#./.git/objects/pack/pack-2f5633c36298d2fed697c8c462b17e78cbfcf025.pack
+#./Videos/*
+#./Materias/1S2020/HO212/*
+#./Materias/1S2020//HO413A/Lsd-*
+#./Materias/1S2020//HO413A/Aula_11/Pajek64/*
+#./Orientacoes/Lorena/refs/*
 
+# ignore every file
+*.*
+
+# except gitignore, readme, do and log and doc files
+!.gitignore
+!README.md
+!*.do
+!*.log
+!*.md
+!*.csv
+!*.py
+!*.org
+!*.R
+!*.Rmd
+!*.tex
+!*.txt
+!*.bib
+!*.xlsx
+!*.xls
+!*.ipynb
+!*.sty
+!*.css
+!*.setup
+!*.el
+Bolsa
